--- a/.github/workflows/merge_release.yml
+++ b/.github/workflows/merge_release.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Check if release branch exists
         run: |
